Fix CSS when admin bar is not visible

--- a/mu-plugins/blocks/local-navigation-bar/postcss/style.pcss
+++ b/mu-plugins/blocks/local-navigation-bar/postcss/style.pcss
@@ -11,7 +11,7 @@
 
 	/* If a sticky element is next, it needs to account for the nav bar offset. */
 	& + :where(.wp-block-group.is-position-sticky) {
-		top: calc(var(--wp-admin--admin-bar--height, 0) + 60px);
+		top: calc(var(--wp-admin--admin-bar--height, 0px) + 60px);
 	}
 }
 
